--- a/emojiMaker/index.html
+++ b/emojiMaker/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+      <h1 class="title">Click to customize your emoji</h1>
       <div class="buttons-container">
         <button id="color">color</button>
         <button id="eyes">eyes</button>
