added music player

--- a/index.html
+++ b/index.html
@@ -518,6 +518,27 @@
   </div>
   </div>
   </section>
+
+  <!-- prooject 23 -->
+
+  <div class="musicplayer" class="image">
+      <a href="musicPlayer/index.html" target="_blank">
+        <img src="musicPlayer/assets/assets/images/LishGrooves.jpg" alt="Project Img" />
+      </a>
+    </div>
+
+    <div class="about-project">
+      <h3 class="title-project">Music player</h3>
+
+      <p class="description-project">
+       Music player using HTML, CSS and javascript
+      </p>
+    </div>
+    
+    <div class="details">
+      <strong>Click</strong> on the image to see the demo
+    </div>
+  </div>
     
      <!-- ************* footer*********  -->
       <section>
