added new projects

--- a/randomJokegenerator/index.html
+++ b/randomJokegenerator/index.html
@@ -9,12 +9,13 @@
   <body>
     <div class="wrapper">
       <h1>Don't Laugh Challenge</h1>
-      <p>
+      <p id="updatejoke">
         Some people say that comedians who tell one too many light bulb jokes
         soon burn out, but they don't know watt they are talking about. They're
         not that bright.
       </p>
-      <button>Get Another Joke</button>
+      <button id="btn">Get Another Joke</button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
