added new project

--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
   </div>
   </div>
 </div>
+<!-- <div id="about">
+  <div class="about container">
+    <div class="col-left">
+      <div class="about-img">
+        <img src="./assets/profile.jpg" alt="profile-img" />
+      </div>
+    </div>
+    <div class="col-right">
+      <h1 class="section-title">About <span>me</span></h1>
+      <h2>Front End Developer</h2>
+      <p>
+        Hello, Recently i'm learning Web development & very passionate about
+        Web development and strive to better myself as a Developer.<br />
+        Learning to Program is hard. It's difficult to know where to start,
+        but it's even more challenging to know what to do when you have'nt
+        learned the basics.
+      </p>
+      <button><a href="#hero" class="cta">Download Resume</a></button>
+    </div>
+  </div>
+</div> -->
 
 
 
