added new projects

--- a/index.html
+++ b/index.html
@@ -560,6 +560,48 @@
       <strong>Click</strong> on the image to see the demo
     </div>
   </div>
+
+  <!-- prooject 24 -->
+
+  <div class="drinkwater" class="image">
+    <a href="drinkWater/index.html" target="_blank">
+      <img src="mainimages/Screenshot_10-7-2024_234559_127.0.0.1.jpeg" alt="Project Img" />
+    </a>
+  </div>
+
+  <div class="about-project">
+    <h3 class="title-project">Drink water</h3>
+
+    <p class="description-project">
+     Drink water app using HTML, CSS and javascript
+    </p>
+  </div>
+  
+  <div class="details">
+    <strong>Click</strong> on the image to see the demo
+  </div>
+</div>
+
+<!-- prooject 26 -->
+
+<div class="mealfinder" class="image">
+  <a href="mealFinder/index.html" target="_blank">
+    <img src="mainimages/Screenshot_10-7-2024_234559_127.0.0.1.jpeg" alt="Project Img" />
+  </a>
+</div>
+
+<div class="about-project">
+  <h3 class="title-project">Meal finder</h3>
+
+  <p class="description-project">
+   Meal finder using HTML, CSS and javascript
+  </p>
+</div>
+
+<div class="details">
+  <strong>Click</strong> on the image to see the demo
+</div>
+</div>
     
      <!-- ************* footer*********  -->
       <section>
