made some new changes

--- a/index.html
+++ b/index.html
@@ -21,19 +21,16 @@
             <div class="header-tag">
               <div class="about-me-nav-left">
                 <span class="fa-solid fa-code" aria-hidden="true"
-                  ><strong>N</strong>ikita <strong>G</strong>oyal</span
-                >
+                  ></span>
+                  <div><strong>N</strong>ikita <strong>G</strong>oyal </div>
               </div>
 
               <div class="about-me-nav-right">
                 <nav class="nav">
                   <ul class="nav__list">
-                    <li><a href="home" class="nav__link">Home</a></li>
+                    <li><a href="#home" class="nav__link">Home</a></li>
                     <li>
-                      <a href="#key-Projects" class="nav__link">key Projects</a>
-                    </li>
-                    <li>
-                      <a href="#projects" class="nav__link"> My projects</a>
+                      <a href="#projects" class="nav__link"> projects</a>
                     </li>
                     <li><a href="#contact" class="nav__link">Contact</a></li>
                   </ul>
@@ -55,7 +52,7 @@
   </div>
   </div>
 </div> -->
-          <div id="about">
+          <div id="home">
             <div class="about container">
               <div class="col-left">
                 <div class="about-img">
@@ -87,7 +84,7 @@
     <!-- end about section -->
 
     <!-- *****************key projects****************** -->
-    <section class="key-projects">
+    <section class="key-projects" id="projects">
       <div class="key-projects-body">
         <h1><strong>K</strong>EY <strong>P</strong>ROJECTS</h1>
         <diV class="project-container">
@@ -169,7 +166,7 @@
                 <img src="mainimages/palindrome.jpeg" alt="image of project" />
               </div>
               <div class="project-info">
-                <h3>Countdown Timer</h3>
+                <h3>Palindrome</h3>
                 <p>Palindrome,word spelled same forward and backwards</p>
                 <button>
                   <a href="palindromeProject/index.html" target="blank"
@@ -313,7 +310,9 @@
               </div>
               <div class="contact-info">
                 <h1>Phone</h1>
-                <h2>+91 3394095844</h2>
+                <h2>+91 6264641730
+
+                </h2>
               </div>
             </div>
             <div class="contact-item">
@@ -348,34 +347,7 @@
         </div>
       </div>
 
-      <!-- <div class="mail">
-     <a href="mailto:nikiiigoyal@gmail.com" class="footer__link Contact">nikiiigoyal@gmail.com</a>
-      </div>
-    <div class="footer-icons">
-    <ul class="social-list">
-      <li class="social-list__item">
-        <a href="https://codepen.io/nikiiigoyal" class="social-list__link" target="_blank" >
-         <i class="las la-user-plus"></i>
-        </a>
-      </li>
-
-      
-
-      <li class="social-list__item">
-        <a href="https://www.linkedin.com/in/nikita-goyal-95562228a/" class="social-list__link" target="_blank" >
-          <i class="fa-brands fa-linkedin"></i>
-        </a>
-      </li>
-
-      <li class="social-list__item">
-        <a href="https://github.com/nikiiigoyal" class="social-list__link" target="_blank">
-          <i class="fa-brands fa-github"></i>
-        </a>
-      </li>
-    </ul>
-    </div>
-     </div>
-   </footer> -->
+     
     </section>
   </body>
 </html>
