made new changes in my index html file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Projects</title>
+    <title>Nikita Goyal</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/style2.css" />
+    <link rel="icon" href="mainimages/nginxicontop.svg" type="image/x-icon">
     <script
       src="https://kit.fontawesome.com/06b3244631.js"
       crossorigin="anonymous"
