--- a/bookFinder/search.html
+++ b/bookFinder/search.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <script
-    src="https://kit.fontawesome.com/06b3244631.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/06b3244631.js"
+      crossorigin="anonymous"
+    ></script>
     <title>search page</title>
-</head>
-<body>
-    <div class="main-container">
-        <div class="navigation">
-          <h1>Booksure</h1>
-          <ul>
-            <li>About</li>
-            <li>Contact</li>
-          </ul>
+  </head>
+  <body>
+    <div class="search-main-container">
+      <div class="navigation">
+        <h1>Booksure</h1>
+        <ul>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="content">
+        <div class="content-top">
+          <p>
+            You don't need to know the name of the book,<br />
+            if you know the name of the author or publisher,
+            <br />just type, search and find
+          </p>
         </div>
-        <div class="content">
-          <div class="content-top">
-           <p>
-                You don't need to know the name of the book, if you know the name of the author or publisher, just type, search and find
-            </p>
-            <div class="search-bar">
-             <form>
-            <input type="text" placeholder="Type author,book name..." id="search-input">
-            <span class="material-symbols-outlined" id="search-icon">
-                search
-                </span>
-             </form>
-            </div>
-            <diV id="book-container"></diV>
-            <div class="eigth image">
-                <img src="images/8th image.svg" alt="image">
-            </div>
-            </div>
+        <div class="search-container">
+          <input
+            type="text"
+            placeholder="Type author,book name..."
+            id="search-input"
+            class="search-input"
+          />
+          <span class="material-symbols-outlined" id="search-icon">
+            search
+          </span>
         </div>
-            <!-- <section>
+        <div id="book-container">
+          <div class="eigth image">
+            <img src="images/8th image.svg" alt="image" class="search-image" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <section>
 
             <footer class="search-footer-section">
                 <div class="footer-section">
@@ -58,7 +66,6 @@
               </footer>
             </section> -->
 
-          
-    <script src ="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
