added new functionalities

--- a/bookFinder/index.html
+++ b/bookFinder/index.html
@@ -24,7 +24,7 @@
             <li>Contact</li>
           </ul>
         </div>
-        <div class="content">
+        <div class="content-container">
           <div class="content-left">
             <h1>
               Find the <strong>books </strong>you are looking for anywhere
