--- a/bookFinder/search.html
+++ b/bookFinder/search.html
@@ -23,7 +23,7 @@
           <li>Contact</li>
         </ul>
       </div>
-      <div class="content">
+      <div class="search-content">
         <div class="content-top">
           <p>
             You don't need to know the name of the book,<br />
