made new changes in navigation

--- a/bookFinder/index.html
+++ b/bookFinder/index.html
@@ -20,11 +20,11 @@
         <div class="navigation">
           <h1>Booksure</h1>
           <ul>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href= "#about">About</li></a>
+            <li><a href= "#contact">Contact</li></a>
           </ul>
         </div>
-        <div class="content-container">
+        <div class="content-container" id="about">
           <div class="content-left">
             <h1>
               Find the <strong>books </strong>you are looking for anywhere
@@ -148,8 +148,8 @@
        </div>
     </div>
   </section>
-  <footer>
-    <div class="footer-section">
+  <footer id="contact">
+    <div class="footer-section" >
         <h5>Booksure</h5>
         <p>© Copyright 2020 LuisFrag. All rights reserved.</p>
         <div class="footer-icon">
