--- a/bookFinder/search.html
+++ b/bookFinder/search.html
@@ -19,7 +19,7 @@
       <div class="navigation">
         <h1>Booksure</h1>
         <ul>
-          <li>About</li>
+          <li><a href="index.html" class="">Home</li></a>
           <li>Contact</li>
         </ul>
       </div>
