added new changes

--- a/index.html
+++ b/index.html
@@ -68,12 +68,8 @@
                 <h1 class="section-title">About <span>me</span></h1>
                 <h2>Front End Developer</h2>
                 <p>
-                  Hello, Recently i'm learning Web development & very passionate
-                  about Web development and strive to better myself as a
-                  Developer.<br />
-                  Learning to Program is hard. It's difficult to know where to
-                  start, but it's even more challenging to know what to do when
-                  you have'nt learned the basics.
+                  Hello, I'm a budding front-end developer, currently immersing myself in HTML, CSS, and JavaScript fundamentals.".<br />
+                  I'm excited to transition into a professional front-end role where I can contribute and continue learning from experienced developers.
                 </p>
                 <button><a href="#home" class="cta">Download Resume</a></button>
               </div>
