added new projects

--- a/index.html
+++ b/index.html
@@ -242,6 +242,71 @@
                 </button>
               </div>
             </div>
+             <!-- pr. -->
+             <div class="project-item">
+              <div class="project-img">
+                <img src="mainimages/sliderDesign.jpeg" alt="image of project" />
+              </div>
+              <div class="project-info">
+                <h3>Slider Design</h3>
+                <p>Slider Design using Html,Css,javascript</p>
+                <button>
+                  <a href="sliderDesign/index.html" target="blank">Live Demo</a>
+                </button>
+              </div>
+            </div>
+           <!-- pr. -->
+           <div class="project-item">
+            <div class="project-img">
+              <img src="mainimages/wordFreqCounter.jpeg" alt="image of project" />
+            </div>
+            <div class="project-info">
+              <h3>Word Frequecy Converter</h3>
+              <p>Word Frequecy Converter using Html,Css,javascript</p>
+              <button>
+                <a href="wordFrequencyCounter/index.html" target="blank">Live Demo</a>
+              </button>
+            </div>
+          </div>
+           <!-- pr. -->
+           <div class="project-item">
+            <div class="project-img">
+              <img src="mainimages/quizapp.jpeg" alt="image of project" />
+            </div>
+            <div class="project-info">
+              <h3>Quiz App </h3>
+              <p>Quiz App  using Html ,Css and javascript</p>
+              <button>
+                <a href="quizApp/index.html" target="blank">Live Demo</a>
+              </button>
+            </div>
+          </div>
+           <!-- pr. -->
+           <div class="project-item">
+            <div class="project-img">
+              <img src="mainimages/randomNUmberGEn.jpeg" alt="image of project" />
+            </div>
+            <div class="project-info">
+              <h3>Random NUmber Generator</h3>
+              <p>Random NUmber Generator using Html and Css</p>
+              <button>
+                <a href="randomJokegenerator/index.html" target="blank">Live Demo</a>
+              </button>
+            </div>
+          </div>
+          <!-- pr. -->
+          <div class="project-item">
+            <div class="project-img">
+              <img src="mainimages/splitLanding.jpeg" alt="image of project" />
+            </div>
+            <div class="project-info">
+              <h3>Split Landing Page</h3>
+              <p>Split page on hovering using Html, Css</p>
+              <button>
+                <a href="splitLandingPage/index.html" target="blank">Live Demo</a>
+              </button>
+            </div>
+          </div>
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
@@ -258,13 +323,26 @@
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
-                <img src="mainimages/stopwatch.jpeg" alt="image of project" />
+                <img src="mainimages/tributePageImg.jpeg" alt="image of project" />
               </div>
               <div class="project-info">
-                <h3>Stopatch</h3>
-                <p>Stopwatch using Html Css and javascript</p>
+                <h3>Tribute Page</h3>
+                <p>Tribut page using Html and Css</p>
                 <button>
-                  <a href="stopWatch/index.html" target="blank">Live Demo</a>
+                  <a href="tributePage/index.html" target="blank">Live Demo</a>
+                </button>
+              </div>
+            </div>
+            <!-- pr. -->
+            <div class="project-item">
+              <div class="project-img">
+                <img src="mainimages/shoesCollection.jpeg" alt="image of project" />
+              </div>
+              <div class="project-info">
+                <h3>Shoes Collection</h3>
+                <p>Shoes collection ui using Html and Css</p>
+                <button>
+                  <a href="shoesCollection/index.html" target="blank">Live Demo</a>
                 </button>
               </div>
             </div>
@@ -283,6 +361,32 @@
                   <a href="3dSocialMediaIcons/index.html" target="blank"
                     >Live Demo</a
                   >
+                </button>
+              </div>
+            </div>
+             <!-- pr. -->
+             <div class="project-item">
+              <div class="project-img">
+                <img src="mainimages/searchAnimation.jpeg" alt="image of project" />
+              </div>
+              <div class="project-info">
+                <h3>SearchBAr Animation</h3>
+                <p>SearchBAr Animation using Html and Css</p>
+                <button>
+                  <a href="searchBarAnimation/index.html" target="blank">Live Demo</a>
+                </button>
+              </div>
+            </div>
+            <!-- pr. -->
+            <div class="project-item">
+              <div class="project-img">
+                <img src="mainimages/stopwatch.jpeg" alt="image of project" />
+              </div>
+              <div class="project-info">
+                <h3>Stopwatch</h3>
+                <p>Stopwatch using Html Css and javascript</p>
+                <button>
+                  <a href="stopWatch/index.html" target="blank">Live Demo</a>
                 </button>
               </div>
             </div>
