--- a/index.html
+++ b/index.html
@@ -229,6 +229,19 @@
                 </button>
               </div>
             </div>
+             <!-- pr. -->
+           <div class="project-item">
+            <div class="project-img">
+              <img src="mainimages/decimaTORoman.jpeg" alt="image of project" />
+            </div>
+            <div class="project-info">
+              <h3>Decimal to Roman </h3>
+              <p>Decimal to Roman using Html ,Css and javascript</p>
+              <button>
+                <a href="decimalToRomanconverter/index.html" target="blank">Live Demo</a>
+              </button>
+            </div>
+          </div>
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
