added new project

--- a/index.html
+++ b/index.html
@@ -175,6 +175,21 @@
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
+                <img src="mainimages/randommealFInder.jpeg" alt="image of project" />
+              </div>
+              <div class="project-info">
+                <h3>Random meal Finder</h3>
+                <p>Feeling confused what to eat,get a random meal</p>
+                <button>
+                  <a href="randomMealGenerator/index.html" target="blank"
+                    >Live Demo</a
+                  >
+                </button>
+              </div>
+            </div>
+            <!-- pr. -->
+            <div class="project-item">
+              <div class="project-img">
                 <img
                   src="mainimages/countdowntimer.jpeg"
                   alt="image of project"
