--- a/MelodyApp/index.html
+++ b/MelodyApp/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <title>Music Player</title>
+    <title>Melody App</title>
   </head>
   <body>
     <h1 class="main-heading">Music Player</h1>
