--- a/MelodyApp/index.html
+++ b/MelodyApp/index.html
@@ -13,7 +13,7 @@
     <title>Melody App</title>
   </head>
   <body>
-    <h1 class="main-heading">Music Player</h1>
+    <h1 class="main-heading">Melody App</h1>
     <div class="music-container">
       <div class="music-info">
         <h4 class="title"></h4>
