--- a/MelodyX/index.html
+++ b/MelodyX/index.html
@@ -10,10 +10,10 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <title>Melody App</title>
+    <title>MelodyX</title>
   </head>
   <body>
-    <h1 class="main-heading">Melody App</h1>
+    <h1 class="main-heading">MelodyX</h1>
     <div class="music-container">
       <div class="music-info">
         <h4 class="title"></h4>
