--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
             <img src="mainimages/musicPlayer.jpeg" alt="image of project" />
           </div>
           <div class="project-info">
-            <h3>Melody App</h3>
+            <h3>MelodyX</h3>
             <p>Enjoy the tunes</p>
             <button>
-              <a href="MelodyApp/index.html" target="blank"
+              <a href="MelodyX/index.html" target="blank"
                 >Live Demo</a
               >
             </button>
