--- a/weatherForecastApp/index.html
+++ b/weatherForecastApp/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <title>Weather Forecast App</title>
   </head>
   <body>
@@ -15,6 +19,7 @@
           <input
             type="text"
             class="input-type"
+            id="input-form"
             placeholder="Search for a city"
           />
           <button class="submit" id="submit-btn">Submit</button>
@@ -23,8 +28,8 @@
       </div>
     </section>
     <section class="ajax-section">
-      <div class="container">
-        <ul class="cities"></ul>
+      <div class="container" id="ajax-container">
+        <ul class="cities" id="cities"></ul>
       </div>
     </section>
 
