--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             <img src="mainimages/drinkWater.jpeg" alt="image of pproject"/>
           </div>
           <div class="project-info">
-            <h3>Drink water</h3>
-            <p>Drink Water </p>
+            <h3>Weather Forecast</h3>
+            <p>Know the weather of any city</p>
             <button>
               <a href="drinkWater/index.html" target="blank"
                 >Live Demo</a
@@ -187,6 +187,22 @@
                 </button>
               </div>
             </div>
+             <!-- pr -->
+        <div class="project-item">
+          <div class="project-img">
+            <img src="mainimages/weatherForecast.jpeg" alt="image of pproject"/>
+          </div>
+          <div class="project-info">
+            <h3>Weather Forecast</h3>
+            <p>Drink Water </p>
+            <button>
+              <a href="weatherForecastApp/index.html" target="blank"
+                >Live Demo</a
+              >
+            </button>
+          </div>
+        </div>
+        
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
