--- a/weatherForecastApp/index.html
+++ b/weatherForecastApp/index.html
@@ -32,6 +32,9 @@
         <ul class="cities" id="cities"></ul>
       </div>
     </section>
+    <div class="sidebar" id="sidebar">
+      <h1 class="Searches">Recent Searches</h1>
+    </div>
 
     <script src="script.js"></script>
   </body>
