--- a/weatherForecastApp/index.html
+++ b/weatherForecastApp/index.html
@@ -33,7 +33,7 @@
       </div>
     </section>
     <div class="sidebar" id="sidebar">
-      <h1 class="Searches">Recent Searches</h1>
+      <h1 class="searches">Recent Searches</h1>
     </div>
 
     <script src="script.js"></script>
