--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   Hello, I'm a budding front-end developer, currently immersing myself in HTML, CSS, and JavaScript fundamentals.".<br />
                   I'm excited to transition into a professional front-end role where I can contribute and continue learning from experienced developers.
                 </p>
-                <button><a href="#home" class="cta">Download Resume</a></button>
+                <button><a href="mainimages/Nikita goyal developer Resume.pdf" class="cta">Download Resume</a></button>
               </div>
             </div>
           </div>
