--- a/weatherForecastApp/index.html
+++ b/weatherForecastApp/index.html
@@ -32,8 +32,9 @@
         <ul class="cities" id="cities"></ul>
       </div>
     </section>
-    <div class="sidebar" id="sidebar">
+    <div class="sidebar">
       <h1 class="searches">Recent Searches</h1>
+      <ul id="sidebar"></ul>
     </div>
 
     <script src="script.js"></script>
