--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     </li>
                     <li><a href="#contact" class="nav__link">Contact</a></li>
                   </ul>
+                  <img src="mainimages/darkmode.jpg" alt="lightmode" class="theme-icon" id = "theme-icon">
                 </nav>
               </div>
             </div>
@@ -494,5 +495,6 @@
 
      
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
