--- a/index.html
+++ b/index.html
@@ -203,6 +203,21 @@
             </button>
           </div>
         </div>
+        <!-- pr. -->
+        <div class="project-item">
+          <div class="project-img">
+            <img src="mainimages/textToSpeechConverter.jpeg" alt="image of project" />
+          </div>
+          <div class="project-info">
+            <h3>Text to Speech Converter</h3>
+            <p>Get yout whatever text Spoken in different accents.</p>
+            <button>
+              <a href="textToSpeechConverter/index.html" target="blank"
+                >Live Demo</a
+              >
+            </button>
+          </div>
+        </div>
         
             <!-- pr. -->
             <div class="project-item">
