--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             <img src="mainimages/drinkWater.jpeg" alt="image of pproject"/>
           </div>
           <div class="project-info">
-            <h3>Weather Forecast</h3>
-            <p>Know the weather of any city</p>
+            <h3>Drink water</h3>
+            <p>Drink water</p>
             <button>
               <a href="drinkWater/index.html" target="blank"
                 >Live Demo</a
