new project contact page

--- a/index.html
+++ b/index.html
@@ -218,6 +218,21 @@
             </button>
           </div>
         </div>
+        <!-- pr -->
+        <div class="project-item">
+          <div class="project-img">
+            <img src="mainimages/contactPgeDesign.jpeg" alt="image of pproject"/>
+          </div>
+          <div class="project-info">
+            <h3>Contact page Design</h3>
+            <p>Feel free to conatct</p>
+            <button>
+              <a href="contactPageDesign/index.html" target="blank"
+                >Live Demo</a
+              >
+            </button>
+          </div>
+        </div>
         
             <!-- pr. -->
             <div class="project-item">
