new project contact page

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           </div>
           <div class="project-info">
             <h3>Contact page Design</h3>
-            <p>Feel free to conatct</p>
+            <p>I will get back to you</p>
             <button>
               <a href="contactPageDesign/index.html" target="blank"
                 >Live Demo</a
