--- a/2048Game/index.html
+++ b/2048Game/index.html
@@ -20,7 +20,7 @@
                     <div class="score-container">0</div>
                     <div class="best-container">0</div>
                 </div>
-                <div class="restart-game-btn-block"><a class="restart-button">New Game</a></div>
+                <div class="restart-game-btn-block"><a class="restart-button"id="restartBtn">New Game</a></div>
 
 
             </div>
@@ -92,6 +92,7 @@
         </p>
 
     </div></div>
+    <script src="script.js"></script>
 </body>
 </html>
 </header>
