--- a/2048Game/index.html
+++ b/2048Game/index.html
@@ -10,9 +10,7 @@
     <div class="clear"></div>
 <div class="gameouter">
     <div class="container">
-
-
-        <div class="heading">
+ <div class="heading">
 
             <div class="main-title">Join the numbers and get to the 2048 tile!</div> 
             <div class="newgame-score-block">
@@ -88,11 +86,12 @@
         </div>
 
         <p class="game-explanation">
-            <strong class="important">HOW TO PLAY: Use your arrow keys or swipe left or right, up or down to move the tiles. When two tiles with the same number touch, they merge into one.<span class=""> Once you get 2048 in any square, you win.</span></strong>
+                  <strong class="important">HOW TO PLAY: Use your arrow keys or swipe left or right, up or down to move the tiles. When two tiles with the same number touch, they merge into one.<span class=""> Once you get 2048 in any square, you win.</span>
+        </strong>
         </p>
 
     </div></div>
     <script src="script.js"></script>
 </body>
 </html>
-</header>
+
