--- a/index.html
+++ b/index.html
@@ -455,6 +455,26 @@
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
+                <img
+                  src=""
+                  alt="image of project"
+                />
+              </div>
+              <div class="project-info">
+                <h3>Deep thought assignment</h3>
+                <p>
+                 Deep Thought
+                </p>
+                <button>
+                  <a href="dtAssignment/index.html" target="blank"
+                    >Live Demo</a
+                  >
+                </button>
+              </div>
+            </div>
+            <!-- pr. -->
+            <div class="project-item">
+              <div class="project-img">
                 <img src="mainimages/stopwatch.jpeg" alt="image of project" />
               </div>
               <div class="project-info">
