--- a/index.html
+++ b/index.html
@@ -475,6 +475,26 @@
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
+                <img
+                  src=""
+                  alt="image of project"
+                />
+              </div>
+              <div class="project-info">
+                <h3>2048</h3>
+                <p>
+                 2048 game
+                </p>
+                <button>
+                  <a href="2048Game/index.html" target="blank"
+                    >Live Demo</a
+                  >
+                </button>
+              </div>
+            </div>
+            <!-- pr. -->
+            <div class="project-item">
+              <div class="project-img">
                 <img src="mainimages/stopwatch.jpeg" alt="image of project" />
               </div>
               <div class="project-info">
