--- a/2048Game/index.html
+++ b/2048Game/index.html
@@ -85,10 +85,10 @@
             </div>
         </div>
 
-        <p class="game-explanation">
+        <!-- <p class="game-explanation">
                   <strong class="important">HOW TO PLAY: Use your arrow keys or swipe left or right, up or down to move the tiles. When two tiles with the same number touch, they merge into one.<span class=""> Once you get 2048 in any square, you win.</span>
         </strong>
-        </p>
+        </p> -->
 
     </div></div>
     <script src="script.js"></script>
