--- a/index.html
+++ b/index.html
@@ -161,6 +161,26 @@
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
+                <img
+                  src="mainimages/2048Game.jpeg"
+                  alt="image of project"
+                />
+              </div>
+              <div class="project-info">
+                <h3>2048</h3>
+                <p>
+                 2048 game
+                </p>
+                <button>
+                  <a href="2048Game/index.html" target="blank"
+                    >Live Demo</a
+                  >
+                </button>
+              </div>
+            </div>
+            <!-- pr. -->
+            <div class="project-item">
+              <div class="project-img">
                 <img src="mainimages/palindrome.jpeg" alt="image of project" />
               </div>
               <div class="project-info">
@@ -472,26 +492,7 @@
                 </button>
               </div>
             </div>
-            <!-- pr. -->
-            <div class="project-item">
-              <div class="project-img">
-                <img
-                  src=""
-                  alt="image of project"
-                />
-              </div>
-              <div class="project-info">
-                <h3>2048</h3>
-                <p>
-                 2048 game
-                </p>
-                <button>
-                  <a href="2048Game/index.html" target="blank"
-                    >Live Demo</a
-                  >
-                </button>
-              </div>
-            </div>
+            
             <!-- pr. -->
             <div class="project-item">
               <div class="project-img">
